--- a/telemed-ui/src/index.html
+++ b/telemed-ui/src/index.html
@@ -6,7 +6,7 @@
   <base href="/"> <!-- Base URL for routing -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Health Monitoring and Telemedicine Platform"> <!-- Add description -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/telemed-ui/src/assets/favicon.ico">
 
   <!-- Optional: Link Google Fonts (if used globally) -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
